--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,31 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="select_category_hint">Select Category</string>
+    <string name="select_price_hint">Select Price</string>
+
+
+
+
+        <string-array name="category_array">
+            <item>All food</item>
+            <item>Main</item>
+            <item>Pizza</item>
+            <item>Appetizer</item>
+            <item>Side Dish</item>
+            <item>Dessert</item>
+            <item>Beverage</item>
+        </string-array>
+
+        <string-array name="price_array">
+            <item>Any price</item>
+            <item>$</item>
+            <item>$$</item>
+            <item>$$$</item>
+        </string-array>
+
+
+
+
 
 </resources>
