--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
 
     <string-array name="price_array">
         <item>Any price</item>
-        <item>$</item>
-        <item>$$</item>
-        <item>$$$</item>
+        <item>$0 - $10</item>
+        <item>$10 - $20</item>
+        <item>$20 and above</item>
     </string-array>
 
 
